@@ -13,6 +13,7 @@ add_clazy_test(qbytearray-conversion-to-c-style)
 add_clazy_test(qhash-with-char-pointer-key)
 add_clazy_test(qproperty-type-mismatch)
 add_clazy_test(qrequiredresult-candidates)
+add_clazy_test(qstring-ref)
 add_clazy_test(qstring-varargs)
 add_clazy_test(qt-keyword-emit)
 add_clazy_test(qt-keywords)
@@ -50,7 +51,6 @@ add_clazy_test(qmap-with-pointer-key)
 add_clazy_test(qstring-arg)
 add_clazy_test(qstring-comparison-to-implicit-char)
 add_clazy_test(qstring-insensitive-allocation)
-add_clazy_test(qstring-ref)
 add_clazy_test(qt-macros)
 add_clazy_test(strict-iterators)
 add_clazy_test(temporary-iterator)
